--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<div id="chat-box-text">
 						</div>
 						<div id="chat-box-input">
-							<input type="text" id="chat-text-input" autocomplete="off" placeholder="Write a message..." disabled="disabled" onkeypress="return utils.checkEnter(this, event);">
+							<input type="text" id="chat-text-input" autocomplete="off" placeholder="Write a message..." disabled="disabled">
 						</div>
 					</div>
 						<div id="user-list" class="content">
